# usr-python

./: .gitignore  MANIFEST.in  README.md  main.py  new_dup.cpp  omron.py  requirements.txt  setup.cfg
usr_python/: main.py
