[metadata]
name = usr_python
version = 0.0.1
summary = Generates USR as JSON for a given sentence(s).
description = Generates USR as JSON for a given sentence(s).
description-file = 
    README.md
author =
    Saarang Rajguru
author-email =
    saarang.rajguru@protonmail.ch
maintainer-email =
    saarang.rajguru@protonmail.ch
url = https://github.com/99percentcocoa/usr_python/
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research 
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GNU GPLv3)
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True